<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alarm_firing">It\'s %1$s. Your alarm is up.</string>
    <string name="amati_voice_input_disabled_notification_text">Go to Settings and turn it on</string>
    <string name="amati_voice_input_disabled_notification_title">Voice input is off</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer_card_html">&lt;!DOCTYPE html&gt; &lt;html&gt; &lt;head&gt; &lt;meta charset=\"utf-8\"/&gt; &lt;meta name=\"viewport\" content=\"width=device-width, initial-scale=1\"/&gt; &lt;style&gt; html, body { padding: 0; margin: 0; position: relative; background: transparent; overflow: hidden; } .full-style { width: 960px; } &lt;/style&gt; &lt;script&gt; window.onload = function() { MotionWebViewFrame.setWebViewHeight(document.body.getBoundingClientRect().height); }; &lt;/script&gt; &lt;/head&gt; &lt;body class=\"full-style\"&gt; &lt;div id=\"content\" class=\"full-style\" style=\"border: 0px\"&gt;&lt;/div&gt; &lt;div style=\"border: 0px; padding: 0px\"&gt; &lt;!-- 1dp = 1.33px (round to nearest) --&gt; &lt;!-- images should be larger than their container to not look fuzzy --&gt; &lt;link href=\"//fonts.googleapis.com/css?family=Roboto:300,400,600,700\" rel=\"stylesheet\"&gt; &lt;link href=\"//fonts.googleapis.com/css?family=Google+Sans\" rel=\"stylesheet\"&gt; &lt;style&gt; CSS_TEMPLATE &lt;/style&gt; HTML_TEMPLATE &lt;/div&gt; &lt;/body&gt; &lt;/html&gt;</string>
    <string name="app_metadata_gamepad_required">Gamepad Required</string>
    <string name="app_metadata_in_app_purchases">In-App Purchases</string>
    <string name="app_name">Google</string>
    <string name="app_search_hint">Search for apps and games</string>
    <string name="assistant_amati_kids_mode_assistant_disabled_accept">Allow Assistant</string>
    <string name="assistant_amati_kids_mode_assistant_disabled_decline">Cancel</string>
    <string name="assistant_amati_kids_mode_assistant_disabled_title">Google Assistant isn\'t allowed for this account right now</string>
    <string name="assistant_amati_kids_mode_no_oobe_accept">Set up Assistant</string>
    <string name="assistant_amati_kids_mode_no_oobe_decline">Cancel</string>
    <string name="assistant_amati_kids_mode_no_oobe_title">Google Assistant hasn\'t been set up for this account yet</string>
    <string name="assistant_close_dialog_btn">Close</string>
    <string name="assistant_data_sharing_consent_description_1">To do this, allow Google to share your requests with your TV’s apps.</string>
    <string name="assistant_data_sharing_consent_description_1_amati">To do this, allow it to share your requests with your TV’s apps.</string>
    <string name="assistant_data_sharing_consent_description_1_operator">To do this, allow Google to share your requests with %1$s and your TV’s apps.</string>
    <string name="assistant_data_sharing_consent_description_2">You can turn this setting off at any time in your TV settings.\nLearn more at g.co/TVappsearch.\nWithout this permission, Google Assistant may not be able to find all the content from your TV’s apps.</string>
    <string name="assistant_data_sharing_consent_description_2_amati">You can turn this setting off at any time in your TV settings.\nLearn more at g.co/TVappsearch.\n\nWithout this permission, Google Assistant may not be able to find all the content from your TV’s apps.</string>
    <string name="assistant_data_sharing_consent_title">Search across all your TV apps</string>
    <string name="assistant_data_sharing_consent_title_amati">Search across all your TV apps</string>
    <string name="assistant_empty_prompt" />
    <string name="assistant_entry_actions_subtitle">Get better voice control of your TV</string>
    <string name="assistant_entry_desc">Ask it questions. Tell it to do things. It\'s always ready to help.\n\n Use your voice to:\n Find and play favorite shows, fast\n Control your TV, your content, and your home\n Get answers about sports, the weather, and more</string>
    <string name="assistant_entry_for_signout_user_desc">\nAllow the Google Assistant to use your Google account to answer questions and personalize your experience.</string>
    <string name="assistant_entry_sign_in_skip">Skip</string>
    <string name="assistant_entry_sign_in_skip_description">Skip. Button to skip Google Assistant setup.</string>
    <string name="assistant_entry_sign_in_use_without_sign_in">Use Assistant without sign in</string>
    <string name="assistant_entry_sign_in_use_without_sign_in_description">Use Assistant without sign in. Button to continue Google Assistant setup without signing in to an account.</string>
    <string name="assistant_entry_sign_in_yes">Sign in</string>
    <string name="assistant_entry_sign_in_yes_description">Sign in. Button to sign in to an account.</string>
    <string name="assistant_entry_subtitle_watson_1">Find what to watch across all apps</string>
    <string name="assistant_entry_subtitle_watson_2">Get answers, weather, and news</string>
    <string name="assistant_entry_subtitle_watson_3">Dim the lights from your sofa. Just ask.</string>
    <string name="assistant_entry_title">Meet your Google Assistant</string>
    <string name="assistant_hold_down_button_prompt">Hold the Assistant button down and talk</string>
    <string name="assistant_internal_error">Google Assistant is having a problem processing your request</string>
    <string name="assistant_is_not_ready">Google Assistant is starting. In a moment, please try again.</string>
    <string name="assistant_listening_prompt">Listening…</string>
    <string name="assistant_network_change_reauth_decline">No thanks</string>
    <string name="assistant_network_change_reauth_verify">Verify</string>
    <string name="assistant_opt_in_later_continue">Continue</string>
    <string name="assistant_opt_in_later_desc">Go to Settings &gt; Google &gt; Accept permissions to continue setting up Assistant.</string>
    <string name="assistant_opt_in_later_review_permissions">Review permissions</string>
    <string name="assistant_opt_in_later_title">Setup Assistant later</string>
    <string name="assistant_personal_result_allow">Turn on</string>
    <string name="assistant_personal_result_allow_description">Turn on. Button to allow personal results in Assistant.</string>
    <string name="assistant_personal_result_description">Allow your Assistant to give info specific to you on this device, like your photos, personalized recommendations, and more.\n\nNote that anyone using this device can get your personal results too.\n\nYou can turn off personal results through the Assistant settings on this device or the settings in your Assistant app. Learn more at g.co/personalresults/help.</string>
    <string name="assistant_personal_result_description_amati_voice_match_off">Allow your Assistant to give info specific to you on this device, like your photos, personalized recommendations, and more.\n\nOthers may be able to ask for your personal results when Voice Match is off. You can turn Voice Match on through your Assistant app settings.\n\nSome personal results, like YouTube recommendations, appear proactively on this device – without you having to ask for them – on the Home screen and as notifications. Anyone can see and act on them.\n\nYou can turn off personal results through the Assistant settings on this device or the settings in your Assistant app. Learn more at g.co/personalresults/help.</string>
    <string name="assistant_personal_result_description_amati_voice_match_on">Allow your Assistant to give info specific to you on this device, like your photos, personalized recommendations, and more.\n\nWhen you ask for personal results, your Assistant will respond when your voice is recognized. Otherwise, it won’t respond with your personal results.\n\nSome personal results, like YouTube recommendations, appear proactively on this device – without you having to ask for them – on the Home screen and as notifications. Anyone can see and act on them.\n\nYou can turn off personal results through the Assistant settings on this device or the settings in your Assistant app. Learn more at g.co/personalresults/help.</string>
    <string name="assistant_personal_result_skip">No thanks</string>
    <string name="assistant_personal_result_skip_description">No Thanks. Button to not allow personal results in Assistant.</string>
    <string name="assistant_personal_result_title">Get personal results</string>
    <string name="assistant_setup_hotword_education_amati_l1">Try saying “Hey Google” followed by</string>
    <string name="assistant_setup_hotword_education_amati_l2">“Show me movies that are free to me”</string>
    <string name="assistant_setup_hotword_education_amati_l3">“What should I watch?”</string>
    <string name="assistant_setup_hotword_education_amati_l4">“Show me cat videos”</string>
    <string name="assistant_setup_hotword_education_amati_l5">“What\'s the weather tomorrow?”</string>
    <string name="assistant_setup_hotword_intro_accept_amati">Yes, I’m in</string>
    <string name="assistant_setup_hotword_intro_accept_description_amati">Yes, I’m in. Button to allow talking to Google Assistant hands-free on this TV.</string>
    <string name="assistant_setup_hotword_intro_decline_amati">No thanks</string>
    <string name="assistant_setup_hotword_intro_decline_description_amati">No thanks. Button to not allow talking to Google Assistant hands-free on this TV.</string>
    <string name="assistant_setup_hotword_intro_title_amati_v2">Talk to Google hands-free</string>
    <string name="assistant_setup_network_change_reauth_description">We need to verify your identity to resume using Assistant.</string>
    <string name="assistant_setup_network_change_reauth_title">Verify your identity</string>
    <string name="assistant_setup_neutral_jit">Choose one</string>
    <string name="desc_searchable_apps">Select which apps to include in search results.</string>
    <string name="hotword_toggle">\"Ok Google\" detection</string>
    <string name="search_header_open_source_licenses">Open source licenses</string>
    <string name="title_accept_permissions">Accept permissions</string>
    <string name="title_enable_assistant">On</string>
    <string name="title_safe_search">SafeSearch filter</string>
    <string name="title_search_account">Accounts</string>
    <string name="title_searchable_apps">Searchable apps</string>
    <string name="title_view_permissions">View permissions</string>
    <string name="title_weather_temperature_unit">Temperature unit</string>
</resources>