<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:persistent="false"
        android:title="@string/title_enable_assistant"
        android:key="enable_assistant"/>
    <ListPreference
        android:persistent="false"
        android:title="@string/title_search_account"
        android:key="account"
        android:summary="%s"/>
    <Preference
        android:persistent="false"
        android:title="@string/title_accept_permissions"
        android:key="enable_udc_permission"/>
    <Preference
        android:persistent="false"
        android:layout="@layout/ok_google_detection"
        android:key="ok_google_detection"/>
    <Preference
        android:persistent="false"
        android:title="@string/title_view_permissions"
        android:key="permissions">
        <intent
            android:targetPackage="com.google.android.katniss"
            android:targetClass="com.google.android.apps.tvsearch.preferences.udcdisplay.UdcDisplayActivity"/>
    </Preference>
    <Preference
        android:title="@string/title_searchable_apps"
        android:key="searchable_apps"
        android:summary="@string/desc_searchable_apps"
        android:fragment="com.google.android.apps.tvsearch.preferences.fragment.searchable.SearchableAppsPreferenceFragment"/>
    <SwitchPreference
        android:persistent="false"
        android:title="@string/title_safe_search"
        android:key="safe_search"/>
    <SwitchPreference
        android:persistent="false"
        android:title="@string/hotword_toggle"
        android:key="hotword_toggle"/>
    <ListPreference
        android:persistent="false"
        android:title="@string/title_weather_temperature_unit"
        android:key="temperature_unit"
        android:summary="%s"/>
    <Preference
        android:persistent="false"
        android:title="@string/search_header_open_source_licenses"
        android:key="open_source">
        <intent
            android:targetPackage="com.google.android.katniss"
            android:targetClass="com.google.android.libraries.social.licenses.LicenseMenuActivity"/>
    </Preference>
</PreferenceScreen>
