<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/amati_main_padding_start"
    android:paddingEnd="@dimen/main_padding_end">
    <ImageView
        android:id="@+id/guidance_icon"
        android:visibility="gone"
        android:layout_width="@dimen/amati_farfield_mic_default_icon_width"
        android:layout_height="@dimen/amati_farfield_mic_default_icon_height"
        android:src="@drawable/product_logo_assistant_color_24"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline"/>
    <TextView
        android:id="@+id/guidance_title"
        android:layout_width="@dimen/amati_title_container_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/amati_title_margin_top"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guidance_icon"
        style="@style/AmatiSetupGuidanceTitleTextAppearance"/>
    <TextView
        android:id="@+id/guidance_subtitle_1"
        android:visibility="visible"
        android:layout_marginTop="20dp"
        android:text="@string/assistant_setup_hotword_education_amati_l1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guidance_title"
        style="@style/KatnissSetup.AmatiDescriptionSubtitleStyle"/>
    <TextView
        android:textColor="@color/G600"
        android:id="@+id/guidance_subtitle_2"
        android:visibility="visible"
        android:text="@string/assistant_setup_hotword_education_amati_l2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guidance_subtitle_1"
        style="@style/KatnissSetup.AmatiDescriptionSubtitleStyle"/>
    <TextView
        android:textColor="@color/G600"
        android:id="@+id/guidance_subtitle_3"
        android:visibility="visible"
        android:text="@string/assistant_setup_hotword_education_amati_l3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guidance_subtitle_2"
        style="@style/KatnissSetup.AmatiDescriptionSubtitleStyle"/>
    <TextView
        android:textColor="@color/G600"
        android:id="@+id/guidance_subtitle_4"
        android:visibility="visible"
        android:text="@string/assistant_setup_hotword_education_amati_l4"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guidance_subtitle_3"
        style="@style/KatnissSetup.AmatiDescriptionSubtitleStyle"/>
    <TextView
        android:textColor="@color/G600"
        android:id="@+id/guidance_subtitle_5"
        android:visibility="visible"
        android:text="@string/assistant_setup_hotword_education_amati_l5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guidance_subtitle_4"
        style="@style/KatnissSetup.AmatiDescriptionSubtitleStyle"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="horizontal"
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="@dimen/amati_guidance_space_height"/>
</androidx.constraintlayout.widget.ConstraintLayout>
