<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setup_preview_hotword_card"
    android:focusable="true"
    android:descendantFocusability="afterDescendants"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/space_purple"
    android:layout_marginEnd="@dimen/space_purple"
    android:layoutMode="opticalBounds"
    android:elevation="@dimen/entity_detail_card_elevation">
    <TextView
        android:textAppearance="@style/b1v3G200TextAppearance"
        android:gravity="center_vertical"
        android:id="@+id/hotword_setup_title"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/amati_prompt_text_margin_top"
        android:text="@string/assistant_setup_hotword_intro_title_amati_v2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textAppearance="@style/s4v3G300TextAppearance"
        android:gravity="center_vertical"
        android:id="@+id/hotword_setup_description"
        android:visibility="visible"
        android:layout_width="484dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_light_yellow"
        android:lineHeight="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotword_setup_title"/>
    <FrameLayout
        android:layout_gravity="center_vertical"
        android:id="@+id/hotword_neutral_button"
        android:background="@drawable/entity_chip_background"
        android:focusable="true"
        android:visibility="gone"
        android:clickable="false"
        android:longClickable="false"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/suggestion_chip_height"
        android:layout_marginTop="@dimen/space_light_purple"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:elevation="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotword_setup_description">
        <TextView
            android:textAppearance="@style/s1TextAppearance"
            android:text="@string/assistant_setup_neutral_jit"
            style="@style/PreviewHotwordSetupTextView"/>
    </FrameLayout>
    <FrameLayout
        android:layout_gravity="center_vertical"
        android:id="@+id/hotword_yes_button"
        android:background="@drawable/entity_chip_background"
        android:focusable="true"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/suggestion_chip_height"
        android:layout_marginTop="@dimen/space_light_purple"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:elevation="1dp"
        app:layout_constraintStart_toEndOf="@+id/hotword_neutral_button"
        app:layout_constraintTop_toBottomOf="@+id/hotword_setup_description">
        <TextView
            android:textAppearance="@style/s1TextAppearance"
            android:text="@string/assistant_setup_hotword_intro_accept_amati"
            android:contentDescription="@string/assistant_setup_hotword_intro_accept_description_amati"
            style="@style/PreviewHotwordSetupTextView"/>
    </FrameLayout>
    <FrameLayout
        android:layout_gravity="center_vertical"
        android:id="@+id/hotword_no_button"
        android:background="@drawable/entity_chip_background"
        android:focusable="true"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/suggestion_chip_height"
        android:layout_marginTop="@dimen/space_light_purple"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginStart="@dimen/space_salmon"
        android:elevation="1dp"
        app:layout_constraintStart_toEndOf="@+id/hotword_yes_button"
        app:layout_constraintTop_toBottomOf="@+id/hotword_setup_description">
        <TextView
            android:textAppearance="@style/s1TextAppearance"
            android:text="@string/assistant_setup_hotword_intro_decline_amati"
            android:contentDescription="@string/assistant_setup_hotword_intro_decline_description_amati"
            style="@style/PreviewHotwordSetupTextView"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
