<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/network_reauth_card_container"
    android:focusable="true"
    android:descendantFocusability="afterDescendants"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/space_purple"
    android:layout_marginEnd="@dimen/space_purple"
    android:layoutMode="opticalBounds"
    android:elevation="@dimen/entity_detail_card_elevation">
    <TextView
        android:textAppearance="@style/b1v3G200TextAppearance"
        android:gravity="center_vertical"
        android:id="@+id/network_reauth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/amati_prompt_text_margin_top"
        android:text="@string/assistant_setup_network_change_reauth_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textAppearance="@style/s4v3G300TextAppearance"
        android:gravity="center_vertical"
        android:id="@+id/network_reauth_description"
        android:layout_width="@dimen/network_reauth_description_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_light_yellow"
        android:text="@string/assistant_setup_network_change_reauth_description"
        android:lineHeight="@dimen/network_reauth_description_line_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/network_reauth_title"/>
    <FrameLayout
        android:layout_gravity="center_vertical"
        android:id="@+id/network_reauth_verify_button"
        android:background="@drawable/entity_chip_background"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/suggestion_chip_height"
        android:layout_marginTop="@dimen/space_light_purple"
        android:paddingStart="@dimen/suggestion_chip_drawable_padding"
        android:paddingEnd="@dimen/suggestion_chip_drawable_padding"
        android:elevation="@dimen/entity_detail_card_elevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/network_reauth_description">
        <TextView
            android:textAppearance="@style/s1TextAppearance"
            android:text="@string/assistant_network_change_reauth_verify"
            style="@style/PreviewHotwordSetupTextView"/>
    </FrameLayout>
    <FrameLayout
        android:layout_gravity="center_vertical"
        android:id="@+id/network_reauth_decline_button"
        android:background="@drawable/entity_chip_background"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/suggestion_chip_height"
        android:layout_marginTop="@dimen/space_light_purple"
        android:paddingStart="@dimen/suggestion_chip_drawable_padding"
        android:paddingEnd="@dimen/suggestion_chip_drawable_padding"
        android:layout_marginStart="@dimen/space_salmon"
        android:elevation="@dimen/entity_detail_card_elevation"
        app:layout_constraintStart_toEndOf="@+id/network_reauth_verify_button"
        app:layout_constraintTop_toBottomOf="@+id/network_reauth_description">
        <TextView
            android:textAppearance="@style/s1TextAppearance"
            android:text="@string/assistant_network_change_reauth_decline"
            style="@style/PreviewHotwordSetupTextView"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
